upgrade: jdk and springboot version & style: webpage display